# mt

./: CMakeLists.txt  Main.qml  README.md  TuringMachine.cpp  TuringMachine.h  main.cpp
